--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<properties>
-						<bundle.symbolicName>org.cytoscape.biomarker</bundle.symbolicName>
+		<bundle.symbolicName>org.cytoscape.biomarker</bundle.symbolicName>
 		<bundle.namespace>org.cytoscape.biomarker</bundle.namespace>
 	</properties>
 
@@ -11,8 +12,8 @@
 	<artifactId>biomarker</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 
-			<name>${bundle.symbolicName}</name>
-	
+	<name>${bundle.symbolicName}</name>
+
 	<packaging>bundle</packaging>
 
 	<build>
@@ -71,12 +72,12 @@
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
-												<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
+						<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
 						<Bundle-Version>${project.version}</Bundle-Version>
 						<Export-Package>${bundle.namespace}</Export-Package>
 						<Private-Package>${bundle.namespace}.internal.*</Private-Package>
 						<Bundle-Activator>${bundle.namespace}.internal.CyActivator</Bundle-Activator>
-											</instructions>
+					</instructions>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -113,7 +114,7 @@
 			<artifactId>org.osgi.core</artifactId>
 			<version>4.2.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>service-api</artifactId>
@@ -136,6 +137,14 @@
 			<artifactId>pax-logging-api</artifactId>
 			<version>1.5.2</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<!-- Testing -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
