--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<properties>
-		<bundle.symbolicName>org.cytoscape.biomarker</bundle.symbolicName>
-		<bundle.namespace>org.cytoscape.biomarker</bundle.namespace>
+						<bundle.symbolicName>org.cytoscape.Biomarker</bundle.symbolicName>
+		<bundle.namespace>org.cytoscape.Biomarker</bundle.namespace>
 	</properties>
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
-	<artifactId>biomarker</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<artifactId>Biomarker</artifactId>
 
-	<name>${bundle.symbolicName}</name>
-
+			<name>BioMarker</name>
+	
 	<packaging>bundle</packaging>
 
 	<build>
@@ -75,7 +73,7 @@
 						<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
 						<Bundle-Version>${project.version}</Bundle-Version>
 						<Export-Package>${bundle.namespace}</Export-Package>
-						<Private-Package>${bundle.namespace}.internal.*</Private-Package>
+						<Private-Package>${bundle.namespace}.internal.*,org.cytoscape.service.util.internal.*,org.apache.commons.math3.*</Private-Package>
 						<Bundle-Activator>${bundle.namespace}.internal.CyActivator</Bundle-Activator>
 					</instructions>
 				</configuration>
@@ -114,7 +112,7 @@
 			<artifactId>org.osgi.core</artifactId>
 			<version>4.2.0</version>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>service-api</artifactId>
@@ -138,15 +136,16 @@
 			<version>1.5.2</version>
 			<scope>provided</scope>
 		</dependency>
-
-		<!-- Testing -->
+		
+		<!-- math3 -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.10</version>
-			<scope>test</scope>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-math3</artifactId>
+		    <version>3.0</version>
 		</dependency>
+		
 
 	</dependencies>
 
+	<version>1.0</version>
 </project>
