--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,39 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<properties>
-						<bundle.symbolicName>org.cytoscape.Biomarker</bundle.symbolicName>
-		<bundle.namespace>org.cytoscape.Biomarker</bundle.namespace>
+		<bundle.symbolicName>org.cytoscape.Biomarker</bundle.symbolicName>
+    <bundle.namespace>org.cytoscape.Biomarker</bundle.namespace>
+
+    <!--API versions -->
+    <cytoscape.api.version>3.0.0-beta3</cytoscape.api.version>
+
+    <junit.version>4.10</junit.version>
+    
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
 	<artifactId>Biomarker</artifactId>
-
-			<name>BioMarker</name>
+  <version>0.1.0-SNAPSHOT</version>
+	<name>BioMarker</name>
 	
-	<packaging>bundle</packaging>
+  <packaging>bundle</packaging>
+
+  <scm>
+    <connection>scm:git:git@github.com:idekerlab/biomarker.git</connection>
+    <developerConnection>scm:git:git@github.com:idekerlab/biomarker.git</developerConnection>
+    <url>git@github.com:idekerlab/biomarker.git</url>
+  </scm>
+  
+  <contributors>
+    <contributor>
+      <name>Ryo Araki</name>
+      <email>r-araki AT ist.osaka-u.ac.jp</email>
+      <url>http://www.cytoscape.org/</url>
+    </contributor>
+  </contributors>
 
 	<build>
 		<resources>
@@ -77,7 +99,17 @@
 						<Bundle-Activator>${bundle.namespace}.internal.CyActivator</Bundle-Activator>
 					</instructions>
 				</configuration>
-			</plugin>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <goals>deploy</goals>
+          <pushChanges>false</pushChanges>
+          <localCheckout>true</localCheckout>
+        </configuration>
+      </plugin>
 		</plugins>
 	</build>
 
@@ -116,17 +148,17 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>service-api</artifactId>
-			<version>[3.0.0-alpha7,4.0)</version>
+      <version>[${cytoscape.api.version},4.0)</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>swing-application-api</artifactId>
-			<version>[3.0.0-alpha7,4.0)</version>
+			<version>[${cytoscape.api.version},4.0)</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>session-api</artifactId>
-			<version>[3.0.0-alpha7,4.0)</version>
+			<version>[${cytoscape.api.version},4.0)</version>
 		</dependency>
 
 		<!-- Logging -->
@@ -146,6 +178,4 @@
 		
 
 	</dependencies>
-
-	<version>1.0</version>
 </project>
